--- a/pages/therapists.html
+++ b/pages/therapists.html
@@ -1,116 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Therapists - Zenith Wellness</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="pages.css">
-</head>
-<body>
-  <header class="header">
-    <div class="header-inner">
-      <a href="index.html" class="logo">Zenith</a>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About us</a>
-        <a href="therapists.html" class="nav-active">Therapists</a>
-        <a href="services.html">Service</a>
-        <a href="#">Contact us</a>
-        <a href="faqs.html">FAQs</a>
-      </nav>
-      <a href="#" class="btn-login">Login</a>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Therapists - Zenith Wellness</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/therapists.css">
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container nav-row">
+        <div class="logo">Zenith</div>
+        <nav class="main-nav">
+          <a href="inde">Home</a>
+          <a href="about.html">About us</a>
+          <a href="therapists.html" class="active">Therapists</a>
+          <a href="services.html">Service</a>
+          <a href="contact.html">Contact us</a>
+          <a href="faqs.html">FAQs</a>
+        </nav>
+        <div class="auth"><a class="login" href="#">Login</a></div>
+      </div>
+    </header>
 
-  <section class="page-therapists therapists-pattern">
-    <h1 class="therapists-title">Therapists</h1>
-    <div class="therapist-list">
-      <div class="therapist-card">
-        <img src="assets/therapist-tsoriya.png" alt="Tsoriya Tesfaye" class="therapist-img">
-        <div class="therapist-info">
-          <h3>Tsoriya Tesfaye</h3>
-          <ul>
-            <li>Licensed family therapist.</li>
-            <li>Focuses on strengthening parent-child relationships.</li>
-            <li>Helps families build trust, communication, and resilience.</li>
-          </ul>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="therapists-title">Therapists</h1>
         </div>
-      </div>
-      <div class="therapist-card">
-        <img src="assets/therapist-salihat.png" alt="Salihat Mohammed" class="therapist-img">
-        <div class="therapist-info">
-          <h3>Salihat Mohammed</h3>
-          <ul>
-            <li>Child and adolescent therapist.</li>
-            <li>Guides young clients through school stress and self-expression.</li>
-            <li>Uses creative methods to nurture confidence and growth.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="therapist-card">
-        <img src="assets/therapist-hayat.png" alt="Hayat Seid" class="therapist-img">
-        <div class="therapist-info">
-          <h3>Hayat Seid</h3>
-          <ul>
-            <li>Specialist in workplace stress and burnout.</li>
-            <li>Supports professionals in managing pressure and finding balance.</li>
-            <li>Combines mindfulness with practical coping strategies.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <section class="get-in-touch">
-    <div class="get-in-touch-inner">
-      <div class="get-in-touch-info">
-        <h2>Get In Touch</h2>
-        <div class="social-icons">
-          <a href="#" class="social-icon" aria-label="Instagram"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="2" width="20" height="20" rx="5"/><circle cx="12" cy="12" r="4"/><circle cx="18" cy="6" r="1.5"/></svg></a>
-          <a href="#" class="social-icon" aria-label="LinkedIn"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="2" width="20" height="20" rx="2"/><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a>
-          <a href="#" class="social-icon" aria-label="Email"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg></a>
+      <section class="container therapists-list">
+        <div class="therapist-card">
+          <img class="therapist-img" src="../public/images/lala.jpg" alt="Tsoriya Tesfaye">
+          <div class="therapist-copy">
+            <h3>Tsoriya Tesfaye</h3>
+            <ul>
+              <li>Licensed family therapist.</li>
+              <li>Focuses on strengthening parent–child relationships.</li>
+              <li>Helps families build trust, communication, and resilience.</li>
+            </ul>
+          </div>
         </div>
-        <p class="copyright">© 2026 Zenith Wellness. All rights reserved.</p>
-        <div class="legal-links"><a href="#">Privacy</a><span>•</span><a href="#">Terms</a><span>•</span><a href="#">Sitemap</a></div>
-      </div>
-      <form class="contact-form">
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Enter your Name">
-        <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Enter your Email">
-        <label for="message">How can we help?</label>
-        <textarea id="message" placeholder="Enter your message here" rows="4"></textarea>
-        <button type="submit" class="btn btn-submit">Submit</button>
-      </form>
-    </div>
-  </section>
 
-  <footer class="footer">
-    <div class="footer-inner">
-      <div class="footer-column"><h4>About</h4><a href="index.html">Home</a><a href="about.html">Our story</a></div>
-      <div class="footer-column"><h4>Help</h4></div>
-      <div class="footer-column">
-        <h4>Contact</h4>
-        <p>Phone: +2519 10193204</p>
-        <p>Email: Salihatali38@gmail.com</p>
-        <p>ruhi98mek@gmail.com</p>
-      </div>
-      <div class="footer-column footer-promo">
-        <h4>Receive new promotions</h4>
-        <p class="collab-text">let's collaborate</p>
-        <div class="newsletter-form">
-          <input type="email" placeholder="Input your email" aria-label="Email">
-          <button type="button" class="btn btn-subscribe">Subscribe</button>
+        <div class="therapist-card">
+          <img class="therapist-img" src="../public/images/salihat.jpg" alt="Salihat Mohammed">
+          <div class="therapist-copy">
+            <h3>Salihat Mohammed</h3>
+            <ul>
+              <li>Child and adolescent therapist.</li>
+              <li>Guides young clients through school stress and self-expression.</li>
+              <li>Uses creative methods to nurture confidence and growth.</li>
+            </ul>
+          </div>
         </div>
-        <div class="footer-social"><a href="#" aria-label="Twitter">𝕏</a><a href="#" aria-label="Facebook">f</a><a href="#" aria-label="LinkedIn">in</a><a href="#" aria-label="YouTube">▶</a></div>
-        <p class="copyright">© 2026 Zenith Wellness. All rights reserved.</p>
-        <div class="legal-links"><a href="#">Privacy</a><span>•</span><a href="#">Terms</a><span>•</span><a href="#">Sitemap</a></div>
+
+        <div class="therapist-card">
+          <img class="therapist-img" src="../public/images/hayat.jpg" alt="Hayat Seid">
+          <div class="therapist-copy">
+            <h3>Hayat Seid</h3>
+            <ul>
+              <li>Specialist in workplace stress and burnout.</li>
+              <li>Supports professionals in managing pressure and finding balance.</li>
+              <li>Combines mindfulness with practical coping strategies.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container footer-grid">
+        <div>© 2026 Zenith Wellness</div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
