modified:   index.html 	modified:   pages/about.html 	modified:   pages/services.html 	modified:   pages/therapists.html 	new file:   public/images/dog.png 	new file:   public/images/dog.webp 	new file:   public/images/dog2.svg 	modified:   styles/about.css 	deleted:    styles/common.css 	modified:   styles/contact.css 	modified:   styles/faqs.css 	deleted:    styles/fqas.css 	modified:   styles/services.css 	modified:   styles/therapists.css

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       <span class="Cname">Zenith</span>
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="about.html">About us</a>
-        <a href="therapists.html">Therapists</a>
-        <a href="services.html">Service</a>
-        <a href="contact.html">Contact us</a>
-        <a href="faqs.html">FAQs</a>
+        <a href="pages/about.html">About us</a>
+        <a href="pages/therapists.html">Therapists</a>
+        <a href="pages/services.html">Service</a>
+        <a href="pages/contact.html">Contact us</a>
+        <a href="pages/faqs.html">FAQs</a>
       </nav>
+
       <button class="btn-login">Login</button>
     </div>
   </header>
