--- a/pages/services.html
+++ b/pages/services.html
@@ -7,19 +7,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="pages.css">
+  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../styles/services.css">
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
-      <a href="index.html" class="logo">Zenith</a>
+      <a href="../index.html" class="logo">Zenith</a>
       <nav class="nav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About us</a>
         <a href="therapists.html">Therapists</a>
         <a href="services.html" class="nav-active">Service</a>
-        <a href="#">Contact us</a>
+        <a href="contact.html">Contact us</a>
         <a href="faqs.html">FAQs</a>
       </nav>
       <a href="#" class="btn-login btn-login-outline">Login</a>
@@ -39,7 +39,13 @@
           <span>24/7</span>
         </div>
       </div>
-      <div class="help-dog" aria-hidden="true">🐕</div>
+      <div class="help-dog">
+        <div class="dog-circle"></div>
+        <img src="../public/images/dog.png" alt="dog">
+
+      </div>
+
+
     </div>
   </section>
 
@@ -119,7 +125,7 @@
 
   <footer class="footer">
     <div class="footer-inner">
-      <div class="footer-column"><h4>About</h4><a href="index.html">Home</a><a href="about.html">Our story</a></div>
+      <div class="footer-column"><h4>About</h4><a href="../index.html">Home</a><a href="about.html">Our story</a></div>
       <div class="footer-column"><h4>Help</h4></div>
       <div class="footer-column">
         <h4>Contact</h4>
